Spot Guideの画像への文字配置とgooglemapの配置を行なった。

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -61,7 +61,7 @@
   <div class="l-experience__wrap">
     <h2 class="c-title__sub">Experience</h2>
     <div class="c-bar--black"></div>
-      <div class="l-experience__button c-btn c-btnColor--experience"><p class="c-btn__text">Unforgettable Winter Day!</p></div>
+      <div class="l-experience__button c-btn c-btnColor--experience"><a href="#"><p class="c-btn__text">Unforgettable Winter Day!</p></a></div>
     <ul class="l-experience__menu flex flex_spaceBet">
       <li class="l-experience__images"><a href="#"><img src="../assets/images/ikeda_feb2018_DSC6314.jpg" width="335px"></a><p>Walking in the snow</p></li>
       <li class="l-experience__images"><a href="#"><img src="../assets/images/ikeda_sep2017_DSC4965-2-1.jpg" width="335px"></a><p>Fly in the mountain</p></li>
@@ -83,21 +83,21 @@
         <div class="l-stories__images"><img src="../assets/images/top_life_wood.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Forests take decades to grow. Cedar is indispensable to house building ...</p>
-          <div class="c-btn c-btnColor--wood"><p class="c-btn__text">Read detail</p></div>
+          <div class="c-btn c-btnColor--wood"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
       <li class="flex">
         <div class="l-stories__images"><img src="../assets/images/top_life_water.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Ikeda Town has a lot of rain. Forested area that occupies 90% of the ...</p>
-          <div class="c-btn c-btnColor--water"><p class="c-btn__text">Read detail</p></div>
+          <div class="c-btn c-btnColor--water"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
       <li class="flex">
         <div class="l-stories__images"><img src="../assets/images/top_life_rice.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Rice is the staple food of the Japanese people. Rice is grown on ...</p>
-          <div class="c-btn c-btnColor--rice"><p class="c-btn__text">Read detail</p></div>
+          <div class="c-btn c-btnColor--rice"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
     </ul>
@@ -121,7 +121,7 @@
   <div class="l-mapAccess__wrap">
     <h2 class="c-title__sub">Map & Access</h2>
     <div class="c-bar--black"></div>
-    <div class=".l-mapAccess__gmap" ><img src="">
+    <div class="l-mapAccess__gmap" >
 
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d414106.8239481942!2d135.86065822225385!3d35.81933376336501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5fff55a870acbe11%3A0xa215f311ee70e60!2z56aP5LqV55yM!5e0!3m2!1sja!2sjp!4v1555469009133!5m2!1sja!2sjp" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
