--- a/src/scss/layout/_map.scss
+++ b/src/scss/layout/_map.scss
@@ -8,9 +8,36 @@
   margin: 0 auto;
 }
 .l-mapAccess__gmap{
-  width: 100%;
+  // width: 100%;
   margin: 25px auto 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  object{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
+
 .l-mapAccess__button{
   margin: 40px auto 0;
 }
