ファイルの追加とhover表現の実装

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
   color: #fff;
 }
 .l-footer{
-  background-color: $colorMain;
+  background-color: #00444A;
   padding-top: 60px;
 }
 .l-footer__contact{
