スクロールしたらコンテンツが表示される

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -60,8 +60,8 @@
 <div id="experience" class="l-experience">
     <h2 class="c-title__sub">Experience</h2>
     <div class="c-bar--black"></div>
-      <div class="p-experience__button c-btn c-btnColor--experience p-experience__btn--hover"><a href="#"><p class="c-btn__text">Unforgettable Winter Day!</p></a></div>
-    <ul class="p-experience__menu flex flex_spaceBet">
+      <div class="p-experience__button c-btn c-btnColor--experience p-experience__btn--hover is-hide is-up"><a href="#"><p class="c-btn__text">Unforgettable Winter Day!</p></a></div>
+    <ul class="p-experience__menu flex flex_spaceBet is-hide is-up">
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_feb2018_DSC6314.jpg" width="335px"></a><p>Walking in the snow</p></li>
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_sep2017_DSC4965-2-1.jpg" width="335px"></a><p>Fly in the mountain</p></li>
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_nov2018_DSC8086.jpg" width="335px"></a><p>Making mochi (rice cakes)</p></li>
@@ -77,21 +77,21 @@
     <h2 class="c-title__sub">Stories<br>-Three Treasures of Ikeda-</h2>
     <div class="c-bar--black"></div>
     <ul class="p-stories__list">
-      <li class="flex">
+      <li class="flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_wood.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Forests take decades to grow. Cedar is indispensable to house building ...</p>
           <div class="c-btn c-btnColor--wood"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
-      <li class="flex">
+      <li class="flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_water.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Ikeda Town has a lot of rain. Forested area that occupies 90% of the ...</p>
           <div class="c-btn c-btnColor--water"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
-      <li class="flex">
+      <li class="flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_rice.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Rice is the staple food of the Japanese people. Rice is grown on ...</p>
@@ -106,7 +106,7 @@
   <div class="p-spotGuide__wrap">
     <h2 class="c-title__sub">Sopt & Guide</h2>
     <div class="c-bar--black"></div>
-    <ul class="p-spotGuide__list flex">
+    <ul class="p-spotGuide__list flex is-hide is-up">
       <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_ds.jpg" width="340px"></a><p class="p-spotGuide__text">- Dining & Shopping</p></li>
       <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_ss.jpg" width="340px"></a><p class="p-spotGuide__text">- Sightseeing Spot</p></li>
       <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_act.jpg" width="340px"></a><p class="p-spotGuide__text">- Activities</p></li>
@@ -119,7 +119,7 @@
   <div class="p-mapAccess__wrap">
     <h2 class="c-title__sub">Map & Access</h2>
     <div class="c-bar--black"></div>
-    <div class="p-mapAccess__gmap" >
+    <div class="p-mapAccess__gmap is-hide is-up" >
 
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d414106.8239481942!2d135.86065822225385!3d35.81933376336501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5fff55a870acbe11%3A0xa215f311ee70e60!2z56aP5LqV55yM!5e0!3m2!1sja!2sjp!4v1555469009133!5m2!1sja!2sjp" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
