スクロールするとコンテンツが浮き上がる処理の実装

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,6 +1,6 @@
 <% var title = "IKEDA FUKUI, JAPAN"; var description = "トップのdescription"; %> 
 <% include src/ejs/template/_head %>
-<header id="top" class="l-header">
+<header id="top" class="l-header js-header">
   <div class="flex p-header__bar">
     <h1><a  href="#"><img class="p-header__logo" src="../assets/images/h_logo.png" width="105px" height="40px"></a></h1>
     <div class="p-header__humberger js-header__humberger">
