--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .l-header{
   width: 100%;
   height:100px;
-  background-color: $colorMain;
-  //position: fixed;
+  position: fixed;
+  opacity: 0.8;
   z-index: 10;
 }
