--- a/src/scss/object/project/_experience.scss
+++ b/src/scss/object/project/_experience.scss
@@ -23,13 +23,13 @@
 
 .is-hide{
   opacity: 0;
-  transition: all 1s ease;
+  transition: all .5s ease;
+  &.is-show{
+    opacity: 1;
+    transform: none;
+  }
 }
 
-.is-show{
-  opacity: 1;
-  transition: none;
-}
 .is-up{
-  transform: translateY(10px);
+  transform: translate(0,100px);
 }
