スクロールするとヘッダーの色が変化

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -53,8 +53,8 @@
         <div class="swiper-pagination"></div>
       
         <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev swiper-custom-button"></div>
+        <div class="swiper-button-next swiper-custom-button"></div>
       </div>
 </div>
 <div id="experience" class="l-experience">
@@ -152,7 +152,7 @@
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_ut.png" width="45px"></a></li>
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_vimeo.png" width="45px"></a></li>
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_insta.png" width="45px"></a></li>
-        <li class="p-sns__icon"><img src="../assets/images/icon_fukidashi.png" width="150px"></li>
+        <li class=""><img src="../assets/images/icon_fukidashi.png" width="150px"></li>
       </ul>
     </div>
   </div>
