--- a/src/scss/object/component/_swiper.scss
+++ b/src/scss/object/component/_swiper.scss
@@ -6,3 +6,31 @@
 .swiper_img{
   width: 100%;
 }
+.swiper-button-next{
+  right: 20px;
+  border-right: 1px solid $colorWhite;
+  border-top: 1px solid $colorWhite;
+}
+.swiper-button-prev{
+  left: 20px;
+  border-left: 1px solid $colorWhite;
+  border-bottom: 1px solid $colorWhite;
+}
+.swiper-custom-button{
+  position: absolute;
+  top: 50%;
+  width: 30px;
+  height: 30px;
+  margin-top: -22px;
+  z-index: 100;
+  cursor: pointer;
+  background-size: 27px 44px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: rotate(45deg);
+  background-image: none;/* 背景画像なし */
+}
+.swiper-pagination-bullet-active{
+  opacity: 1;
+  background-color: $colorMain;
+}
