--- a/src/scss/object/project/_header.scss
+++ b/src/scss/object/project/_header.scss
@@ -54,6 +54,7 @@
 .p-header_overlay {
   content: "";
   display: block;
+  //position: fixed;
   width: 0;
   height: 0;
   background-color: rgba(255, 255, 255, 0.6);
@@ -90,8 +91,8 @@
     transform: translateZ(0);
   }
   .p-header_overlay{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     opacity: 1;
     z-index: 5;
   }
@@ -105,5 +106,5 @@
   justify-content: space-between;
 }
 .is-putColor{
-  background-color: $colorMain;
+  background: rgba(0, 68, 74, 0.85);
 }
