--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -61,7 +61,7 @@
     <h2 class="c-title__sub">Experience</h2>
     <div class="c-bar--black"></div>
       <div class="p-experience__button c-btn c-btnColor--experience p-experience__btn--hover is-hide is-up"><a href="#"><p class="c-btn__text">Unforgettable Winter Day!</p></a></div>
-    <ul class="p-experience__menu flex flex_spaceBet is-hide is-up">
+    <ul class="p-experience__menu flex flex_center is-hide is-up">
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_feb2018_DSC6314.jpg" width="335px"></a><p>Walking in the snow</p></li>
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_sep2017_DSC4965-2-1.jpg" width="335px"></a><p>Fly in the mountain</p></li>
       <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_nov2018_DSC8086.jpg" width="335px"></a><p>Making mochi (rice cakes)</p></li>
@@ -77,25 +77,25 @@
     <h2 class="c-title__sub">Stories<br>-Three Treasures of Ikeda-</h2>
     <div class="c-bar--black"></div>
     <ul class="p-stories__list">
-      <li class="flex is-hide is-up">
+      <li class="p-stories__list-box flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_wood.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Forests take decades to grow. Cedar is indispensable to house building ...</p>
-          <div class="c-btn c-btnColor--wood"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+          <div class="p-stories__btn c-btn c-btnColor--wood"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
-      <li class="flex is-hide is-up">
+      <li class="p-stories__list-box flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_water.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Ikeda Town has a lot of rain. Forested area that occupies 90% of the ...</p>
-          <div class="c-btn c-btnColor--water"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+          <div class="p-stories__btn c-btn c-btnColor--water"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
-      <li class="flex is-hide is-up">
+      <li class="p-stories__list-box flex is-hide is-up">
         <div class="p-stories__images"><img src="../assets/images/top_life_rice.png" width="258px"></div>
         <div>
           <p class="p-stories__text">Rice is the staple food of the Japanese people. Rice is grown on ...</p>
-          <div class="c-btn c-btnColor--rice"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+          <div class="p-stories__btn c-btn c-btnColor--rice"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
         </div>
       </li>
     </ul>
@@ -147,12 +147,12 @@
 <div id="sns" class="l-sns">
   <div class="p-sns__wrap">
     <div>
-      <ul class="flex">
+      <ul class="flex flex_center">
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_fb.png" width="45px"></a></lic>
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_ut.png" width="45px"></a></li>
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_vimeo.png" width="45px"></a></li>
         <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_insta.png" width="45px"></a></li>
-        <li class=""><img src="../assets/images/icon_fukidashi.png" width="150px"></li>
+        <li class="p-sns__bubble"><img src="../assets/images/icon_fukidashi.png" width="150px"></li>
       </ul>
     </div>
   </div>
