--- a/src/scss/object/project/_stories.scss
+++ b/src/scss/object/project/_stories.scss
@@ -18,11 +18,35 @@
       }
     }
   }
+  @include mq(u-sp){
+    padding: 0 30px;
+    justify-content: center;
+    li{
+      justify-content: center;
+      .p-stories__btn{
+        margin: 10px auto 0;
+      }
+    }
+  }
+}
+.p-stories__list-box{
+  @include mq(u-sp){
+    margin: 0 auto;
+  }
 }
 .p-stories__images{
+  width: 100%;
+  max-width: 258px;
   margin-right: 40px;
+  @include mq(u-sp){
+    margin-right: 0;
+    >div{
+      margin-top: 10px; 
+    }
+  }
 }
 .p-stories__text{
-	width: 450px;
+  width: 100%;
+  max-width: 450px;
 	font-size: 16px;
 }
